# ni-kop

./: .gitmodules  README.md  adaptive-mutation-comparison.csv  bench.csv  bench.json  index.html  pandoc.json
.devcontainer/: Dockerfile
1-exact-knapsack/: .gitignore  Makefile  ci.sh  doctest.patch  entangled.dhall  requirements.txt
2-heuristic-knapsack/: Makefile
2-heuristic-knapsack/solver/: Cargo.toml
2-heuristic-knapsack/solver/benches/: bench.rs
2-heuristic-knapsack/solver/src/: lib.rs  main.rs
3-empirical-evaluation/: ci.sh  requirements.txt
4-iterative-knapsack/: ci.sh
4-iterative-knapsack/solver/: Cargo.toml  pgo.sh
4-iterative-knapsack/solver/benches/: bench.rs
4-iterative-knapsack/solver/src/: lib.rs
5-weighted-sat/: .gitignore  requirements.txt
assets/: dataset_A_errors.csv  default_errors.csv  measurements.pkl  mutation_exploration_errors.csv
measurements/: NK_fptas1_10.txt  NK_fptas1_15.txt  NK_fptas1_20.txt  NK_fptas1_22.txt  NK_fptas1_25.txt  NK_fptas1_27.txt  NK_fptas1_30.txt  NK_fptas1_32.txt  NK_fptas1_4.txt  NK_greedy_10.txt  NK_greedy_15.txt  NK_greedy_20.txt  NK_greedy_22.txt  NK_greedy_25.txt  NK_greedy_27.txt  NK_greedy_30.txt  NK_greedy_32.txt  NK_greedy_4.txt  NK_redux_10.txt  NK_redux_15.txt  NK_redux_20.txt  NK_redux_22.txt  NK_redux_25.txt  NK_redux_27.txt  NK_redux_30.txt  NK_redux_32.txt  NK_redux_4.txt  ZKC_fptas1_10.txt  ZKC_fptas1_15.txt  ZKC_fptas1_20.txt  ZKC_fptas1_22.txt  ZKC_fptas1_25.txt  ZKC_fptas1_27.txt  ZKC_fptas1_30.txt  ZKC_fptas1_32.txt  ZKC_fptas1_4.txt  ZKC_fptas2_10.txt  ZKC_fptas2_15.txt  (+156 more)
(+8079 files in other folders)
