[package]
name = "solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
bitvec = "0.22.3"
quickcheck = "1"
quickcheck_macros = "1"
permutation = "0.2.5"

[profile.release]
debug = 1
lto = true
