[package]
name = "solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
bitvec = "0.22.3"
permutation = "0.2.5"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8.4"
rand_chacha = "0.3.1"

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = 1
lto = true

[[bench]]
name = "bench"
harness = false
